# volcengine-s2s-demo-py

./: .commitlintrc.json  .gitignore  @meeta-ch10  AUDIO_BUFFER_GUIDE.md  BUILD.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  MANIFEST.in  README.md  README_WEBSOCKET.md  RTC_FIX_SUMMARY.md  audio_manager.py  build.spec  build_windows.py  build_windows.spec  config.py  debug_udp.py  debug_websocket.py  gui_main.py  logger.py  main.py  main_flower_game.py  main_meeta_game.py  main_meeta_game_v1.py  main_simple.py  main_start_backend.py  mita-huawei-prod  pyproject.toml  realtime_dialog_client.py  requirements.txt  simple_udp_receiver.py  td  test_keyboard.py  test_keys.py  test_pynput_simple.py  test_smooth_audio.py  test_touchdesigner_server.py  (+6 more)
.github/workflows/: README.md  README_STRATEGY.md  SIMPLIFIED_CONFIG.md  build-macos.yml  build-release.yml  build-windows.yml  build.yml  build.yml.backup  release.yml
assets/: README.md
docs/: AUTO_RELEASE_TROUBLESHOOTING.md  BUILD_RELEASE_GUIDE.md  CICD_DEPENDENCIES.md  COMPREHENSIVE_GUIDE.md  QUICK_START.md  RTC_FIX_SUMMARY.md  SEMANTIC_RELEASE.md  TOUCHDESIGNER_INTEGRATION.md  UNIFIED_ARCHITECTURE.md  architecture-best-practice.md  touchdesigner_adapters_comparison.md  touchdesigner_example.py  touchdesigner_setup_guide.md  touchdesigner_webrtc_setup.md  webrtc-sample-rate.md
game/: flower_game_adapter.py  flower_game_app.py  websocket_server.py
game_v1/: config.py  flower_game_adappter.py  flower_game_app.py
gui/: config_manager.py  main_window.py
scripts/: build_mac.sh  build_windows.ps1  build_windows_simple.bat  check_workflows.sh  diagnose_release.sh  fix_semantic_release.sh  init_semantic_release.sh  publish.sh  test_pyaudio_install.sh  trigger_build.sh  validate_workflows.py
src/: __init__.py  app.py  audio_converter.py  audio_manager.py  audio_utils.py  client.py  config.py  dialog_client.py  dialog_session.py  logger.py  orchestrator.py  protocol.py  realtime_dialog_client.py  socket_manager.py  unified_app.py  utils.py  webrtc_manager.py  webrtc_signaling.py
src/adapters/: __init__.py  base.py  browser_adapter.py  factory.py  local_adapter.py  proxy_client.py  proxy_server.py  text_input_adapter.py  touchdesigner_adapter.py  touchdesigner_simple.py  touchdesigner_webrtc_adapter.py  touchdesigner_webrtc_proper_adapter.py  type.py
src/adapters/io/: type.py
src/audio/: audio_converter.py  audio_stream_track.py  input_processor.py  processor.py  save_pcm_to_wav.py  threads.py  type.py
src/audio/processors/: __init__.py  base.py  frame2pcm.py  ogg2pcm.py  ogg_decoder.py  pcm_resampler.py
src/io/: io_base.py
src/io/system/: audio_manager.py  system_io.py
src/io/webrtc/: config.py  webrtc_io.py  webrtc_manager.py  webrtc_signaling.py
src/io/websocket/: config.py  socket_manager.py  websocket_io.py
src/io_adapters/: base.py
src/io_adapters/system/: adapter.py  audio_manager.py  system_adapter.py  system_audio_manager.py
src/io_adapters/webrtc/: adapter.py  audio_stream_track.py  config.py  constants.py  webrtc_adapter.py  webrtc_manager.py  webrtc_signaling.py  webrtc_signaling_server.py
src/types/: audio.py
src/utils/: logger.py
src/volcengine/: client.py  config.py  protocol.py
static/: enhanced_browser_demo.html  unified_browser_demo.html  webrtc_test.html
td/: README.md  SETUP.md  TouchDesigner_Setup_Guide.md  audio_handler.py  audio_input_script.py  audio_output_script.py  button_callbacks.py  execute_callbacks.py  run.py  run_2.py  run_3.py  run_4.py  run_5.py  simple_test.py  start_backend.py  tcpip1_callbacks.py  td_integration.py  udpin1_callbacks.py  voice_chat_component.tox  voice_chat_execute.py  volc_speech_interface.py
tests/: test_audio_formats.py
v2/: config.py  main_simple.py
v2/volcengine/: client.py  config.py  protocol.py
(+11 files in other folders)
