[project]
name = "volcengine-s2s-framework"
version = "1.0.0"
description = "通用语音对话框架，支持多种适配器和火山引擎语音服务"
authors = [
    {name = "markshawn2020", email = "shawninjuly@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = {text = "MIT"}
keywords = ["speech", "audio", "volcengine", "websocket", "voice"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers", 
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pyaudio (>=0.2.14,<0.3.0)",
    "websockets (>=15.0.1,<16.0.0)",
    "typing-extensions (>=4.14.0,<5.0.0)",
    "pydub (>=0.25.1,<0.26.0)",
    "numpy (>=2.3.0,<3.0.0)",
    "aiortc (>=1.13.0,<2.0.0)",
    "av (>=14.4.0,<15.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "ffmpeg-python (>=0.2.0,<0.3.0)",
    "scipy (>=1.15.3,<2.0.0)",
    "soundfile (>=0.13.1,<0.14.0)",
    "pygame (>=2.6.1,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "keyboard (>=0.13.5,<0.14.0)",
    "python-socks (>=2.7.1,<3.0.0)"
]

[tool.poetry]
packages = [{include = "src"}]

[tool.poetry.group.dev.dependencies]
twine = "^6.1.0"
pyinstaller = "^6.12.0"
python-semantic-release = "^10.3.1"

[tool.semantic_release]
version_variables = [
    "pyproject.toml:[project].version",
    "src/__init__.py:__version__"
]
version_toml = [
    "pyproject.toml:[project].version"
]
version_pattern = [
    "src/__init__.py:__version__ = \"{version}\""
]
branch = "main"
build_command = "poetry build"
dist_path = "dist/"
upload_to_release = true
upload_to_pypi = false
remove_dist = false
tag_format = "v{version}"
major_on_zero = false
commit_parser = "conventional"

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.changelog]
template_dir = "templates"
exclude_commit_patterns = []

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"

[tool.semantic_release.changelog.environment]
block_start_string = "{%"
block_end_string = "%}"
variable_start_string = "{{"
variable_end_string = "}}"
comment_start_string = "{#"
comment_end_string = "#}"
trim_blocks = false
lstrip_blocks = false
newline_sequence = "\n"
keep_trailing_newline = false
extensions = []
autoescape = true

[tool.semantic_release.commit_parser_options]
allowed_tags = [
    "build",
    "chore",
    "ci",
    "docs",
    "feat",
    "fix",
    "perf",
    "style",
    "refactor",
    "test"
]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
default_bump_level = 0

[tool.semantic_release.remote]
name = "origin"
type = "github"
ignore_token_for_push = false
insecure = false

[tool.semantic_release.publish]
dist_glob_patterns = ["dist/*"]
upload_to_vcs_release = true

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
